--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 /wandb
 *.pyc
 
+/Modules/monotonic_align/__pycache__
+/Modules/monotonic_align/build
+/Modules/monotonic_align/monotonic_align/core.cp39-win_amd64.pyd
+/Modules/monotonic_align/core.c
+
 temp.py
 *.pickle
 *.pts
+Hyper_Parameters_win.yaml
