--- a/Hyper_Parameters.yaml
+++ b/Hyper_Parameters.yaml
@@ -65,6 +65,20 @@ Flow:
         Stack: 4
         Dropout_Rate: 0.0
 
+Decoder:
+    Prenet:
+        Kernel_Size: 7
+    Residual_Block:
+        Kernel_Size: [3, 7, 11]
+        Dilation_Size: [[1,3,5], [1,3,5], [1,3,5]]
+    Upsample:
+        Rate: [8, 8, 2, 2]
+        Initial_Channels: 512
+        Kernel_Size: [16, 16, 4, 4]
+    Postnet:
+        Kernel_Size: 7
+
+
 Diffusion:
     Max_Step: 100
     Denoiser:
@@ -122,6 +136,9 @@ Train:
         Beta1: 0.9
         Beta2: 0.999
         Epsilon: 1.0e-7
+    Lambda:
+        Diffusion: 45.0
+        KL: 1.0
     Segment_Size: 32    # Feature based
     Weight_Decay: 1.0e-6
     Gradient_Norm: 1.0
